ADD_SUBDIRECTORY(./configcenter)
ADD_SUBDIRECTORY(./libs)	
ADD_SUBDIRECTORY(./daemons)
ADD_SUBDIRECTORY(./agent-watchdog)
ADD_SUBDIRECTORY(./rule)
ADD_SUBDIRECTORY(./utils)
ADD_SUBDIRECTORY(./agent)
ADD_SUBDIRECTORY(./core)
ADD_SUBDIRECTORY(./connector)
ADD_SUBDIRECTORY(./hwcserver)
ADD_SUBDIRECTORY(./data_lifecycle)